# crypto_quant

./: .gitignore  BINANCE_TEST_GUIDE.md  CMakeLists.txt  IDE_SETUP_GUIDE.md  NETWORK_TROUBLESHOOTING.md  PROJECT_INIT_SUMMARY.md  PROXY_CONFIG.md  README.md  pyproject.toml  requirements.txt  问题和进度记录文档
.cache/clangd/index/: Availability.h.508E0ECAE516CD31.idx  AvailabilityInternal.h.1413462367D6CCEA.idx  AvailabilityInternalLegacy.h.52A06772C29F7FE3.idx  AvailabilityMacros.h.AE73E6F3A8F58D48.idx  AvailabilityVersions.h.EED9AE84EDEC4A2D.idx  BinanceCollector.cpp.7D56294216DC1CD8.idx  Python.h.B6DA5C6C3B2265FD.idx  Python.h.EA7B9BAAF72C30AD.idx  TargetConditionals.h.595A25532B299EAE.idx  _OSByteOrder.h.562E14EAF3A80172.idx  _OSByteOrder.h.CAA7B880D325996C.idx  ___wctype.h.31801EB66D223ACC.idx  ___wctype.h.ACB70CDA6CFA0DC7.idx  __assert.C8806CD4B71F97B0.idx  __assertion_handler.823748DA197FD81B.idx  __bit_reference.9ECFBDDEEFAAADDB.idx  __config.2D108650B6E0EB01.idx  __config_site.90F06E47A679D601.idx  __cxxabi_config.h.396B84577EA5BB40.idx  __endian.h.75427924E84B6678.idx  __hash_table.273B1914ADD98380.idx  __locale.525CFF2AE84D8395.idx  __mbstate_t.h.4CE663FC7D03BAF7.idx  __node_handle.0D6DACC55A621988.idx  __split_buffer.E03237736B262A1A.idx  __std_mbstate_t.h.15E14AE5ADADCF81.idx  __stdarg___gnuc_va_list.h.40839C2D9012232B.idx  __stdarg___va_copy.h.C5A212DE1D41EBFD.idx  __stdarg_header_macro.h.DC1C806BB1876E11.idx  __stdarg_va_arg.h.D17AA35092893BF3.idx  __stdarg_va_copy.h.D11B35D7B08ECC24.idx  __stdarg_va_list.h.232EDB46B989A5F9.idx  __stddef_header_macro.h.00530DB2E70F1D43.idx  __stddef_max_align_t.h.BF88E8A44BF584DF.idx  __stddef_null.h.88BCDD35BEE3B342.idx  __stddef_nullptr_t.h.0E6239C0A8BED17A.idx  __stddef_offsetof.h.0791C414913E8B51.idx  __stddef_ptrdiff_t.h.8E443745906CB852.idx  __stddef_size_t.h.D7C1473F207DE4FA.idx  __stddef_wchar_t.h.372DFA4EAF5DF5B8.idx  (+2397 more)
config/: binance.json  exchanges.yaml  settings.yaml
cpp/: CMakeLists.txt
cpp/bindings/: bindings.cpp
cpp/include/analysis/: performance_analyzer.h  performance_metrics.h
cpp/include/backtest/: backtest_engine.h
cpp/include/cleaners/: data_cleaner.h
cpp/include/collectors/: base_collector.h  binance_collector.h  http_client.h
cpp/include/common/: market_data.h  types.h
cpp/include/config/: config_manager.h
cpp/include/indicators/: technical_indicators.h
cpp/include/normalizers/: data_normalizer.h
cpp/include/storage/: kline_storage.h
cpp/include/strategy/: ma_cross_strategy.h  strategy_base.h
cpp/include/websocket/: binance_websocket_client.h  websocket_client_base.h  websocket_factory.h
cpp/src/analysis/: performance_analyzer.cpp  test_performance_analyzer.cpp
cpp/src/backtest/: backtest_engine.cpp  test_backtest.cpp
cpp/src/cleaners/: data_cleaner.cpp  test_data_cleaner.cpp
cpp/src/collectors/: BinanceCollector.cpp  base_collector.cpp  http_client.cpp  test_binance_collector.cpp  test_binance_minimal.cpp  test_http.cpp
cpp/src/config/: config_manager.cpp
cpp/src/indicators/: technical_indicators.cpp  test_indicators.cpp
cpp/src/normalizers/: data_normalizer.cpp
cpp/src/storage/: kline_storage.cpp
cpp/src/strategy/: ma_cross_strategy.cpp  strategy_base.cpp  test_strategy.cpp
cpp/src/websocket/: binance_websocket_client.cpp  test_websocket.cpp  websocket_client_base.cpp  websocket_factory.cpp
data/: BTCUSDT_1h_20251129.csv  BTCUSDT_cleaned_1h_20251129.csv
docker/: docker-compose.yml  prometheus.yml
docs/: API.md  BACKTEST_GAP_ANALYSIS.md  DEVELOPMENT.md  PERFORMANCE_ANALYSIS_INDUSTRY.md  PERFORMANCE_CALCULATION_METHODS.md  PERFORMANCE_METRICS_EXPLAINED.md  QUICKSTART.md  WEBSOCKET_COMPARISON.md
python/: __init__.py  test_bindings.py  websocket_stream.py
python/api/: main.py
python/api/routes/: backtest.py  health.py  klines.py  orderbook.py  ticker.py
python/api/static/: backtest.html
python/config/: settings.py
python/monitoring/: __init__.py
python/services/: binance_test.py
python/storage/: __init__.py
python/tasks/: __init__.py
scripts/: build.sh  clean_build.sh  create_vscode_config.sh  install_pybind11.sh  setup_db.py  setup_ide.sh  test_binance.sh
